@@ -88,16 +88,17 @@ If this variable is set to nil, use internal function only."
   :group 'sha1)
 
 (defun sha1-string-external (string &optional binary)
-  (let (prog args digest default-enable-multibyte-characters)
+  (let (prog args digest)
     (if (consp sha1-program)
 	(setq prog (car sha1-program)
 	      args (cdr sha1-program))
       (setq prog sha1-program
 	    args nil))
     (with-temp-buffer
+      (set-buffer-multibyte nil)
       (insert string)
       (apply (function call-process-region)
-	     (point-min)(point-max)
+	     (point-min) (point-max)
 	     prog t t nil args)
       ;; SHA1 is 40 bytes long in hexadecimal form.
       (setq digest (buffer-substring (point-min)(+ (point-min) 40))))
